--- a/CurrencyChecker/Views/CurrencyCalc.xaml
+++ b/CurrencyChecker/Views/CurrencyCalc.xaml
@@ -5,13 +5,28 @@
     xmlns:local="using:CurrencyChecker.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:converters="using:CurrencyChecker.Converters"
     mc:Ignorable="d">
 
+    <Page.Resources>
+        <converters:ValueConverter x:Key="ValueConverter"/>
+    </Page.Resources>
+    
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <TextBlock HorizontalAlignment="Left" Margin="421,69,0,0" TextWrapping="Wrap" Text="Currency calculator" VerticalAlignment="Top" FontSize="20" FontFamily="Lato" FontWeight="Bold"/>
         <ComboBox ItemsSource="{Binding AvailableCurrencies}" SelectedValue="{Binding ChoosenCurrency, Mode=TwoWay}" HorizontalAlignment="Left" Margin="331,134,0,0" VerticalAlignment="Top" Width="224" Height="60" Header="Select currency to calculate" PlaceholderText="ex. USD"/>
         <TextBox Text="{Binding Path=AmountToCalculate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Margin="331,217,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Header="Enter the ammount to calcualte" Width="224" PlaceholderText="ex. 10"/>
         <Button Content="BACK" HorizontalAlignment="Left" Margin="718,57,0,0" VerticalAlignment="Top" Height="45" Width="100" Click="Navigate_Back"/>
         <Button Content="CALCULATE" HorizontalAlignment="Left" Margin="582,170,0,0" VerticalAlignment="Top" Height="90" Width="101" Click="Calculate"/>
+        <ListBox ItemsSource="{Binding CalculatedCurrencyList}" HorizontalAlignment="Left" Height="384" Margin="331,324,0,0" VerticalAlignment="Top" Width="352">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding Name}" FontWeight="Bold"/>
+                        <TextBlock Text="{Binding Rate, Converter={StaticResource ValueConverter}, ConverterParameter=abc}" />
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
     </Grid>
 </Page>
